<package format="2">
  <name>go2w_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for go2w_description</p>
    <p>This package contains configuration data, 3D models and launch files
for go2w_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>